Fix Layout Bugs / レイアウト関連のバグを修正
概要
スマホ対応 + レイアウト修正
変更したファイル
・ mics.css -> バグ修正+レスポンシブ対応
・ index.html
・ grahp.js
・ mics.js

--- a/css/mics.css
+++ b/css/mics.css
@@ -46,7 +46,7 @@ header{
 
 .container{
     background-color:whitesmoke; 
-    height:400px;
+    height:auto;
     padding-top: 60px;
 }
 
@@ -134,10 +134,20 @@ header{
     height:36px;
     width:96%;
 }
+
 .searcharea p{
     position:relative;
     bottom:0%;
 }
+
+#app{
+    margin-top: 80px;
+    display:flex;
+    /* flex-direction: column ; */
+    flex-wrap: wrap;
+    gap: 70px;
+}
+
 
 .graphA h1{
     color:rgb(241, 102, 9);
@@ -145,7 +155,7 @@ header{
 }
 .graphA{
     width:85%;
-    height:400px;
+    height:420px;
     margin:0 auto;
     position:relative;
     top:3%;
@@ -154,7 +164,7 @@ header{
 
 .graphA1{
     width:35%;
-    height:420px;
+    height:95%;
     margin:0 auto;
    
     background-color: white;
@@ -185,7 +195,7 @@ header{
 
 .graphA2{
     width:65%;
-    height:420px;
+    height:95%;
     margin:0 auto;
     
     background: white;
@@ -342,7 +352,6 @@ header{
     padding: 0.5em 1em;
 }
 .graphD1title{
-    display:flex;
     margin-left: 33px;
     margin-top: 10px;
 }
@@ -353,7 +362,7 @@ header{
     margin:0 auto;
 }
 .graphD11{
-    height: 30%;
+    height: auto;
 }
 .graphD1 h2{
     color:#5c5c5c;
@@ -362,10 +371,10 @@ header{
     margin-top: 12px;
 }
 .graphD12{
-    height: 30%;
+    height: auto;
 }
 .graphD13{
-    height: 30%;
+    height: auto;
 }
 
 
@@ -395,7 +404,6 @@ header{
     padding: 0.5em 1em;
 }
 .graphD2title{
-    display:flex;
     margin-left: 33px;
     margin-top: 10px;
 }
@@ -406,13 +414,13 @@ header{
     margin:0 auto;
 }
 .graphD21{
-    height: 30%;
+    height: auto;
 }
 .graphD22{
-    height: 30%;
+    height: auto;
 }
 .graphD23{
-    height: 30%;
+    height: auto;
 }
 
 
@@ -428,4 +436,152 @@ footer{
     margin-left:2%;
     margin-right: auto;
     color: white;
+}
+
+/* レスポンシブ対応 */
+@media screen and (max-width: 1300px) {
+
+    .graphA{
+        width:85%;
+        height: auto;
+        margin:0 auto;
+        position:relative;
+        top:3%;
+        display:flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 70px;
+    }
+    
+	.graphA1{
+        width:100%;
+        height:auto;
+        margin:0 0;
+       
+        background-color: white;
+    
+        background: white;
+        border-bottom: solid 3px #bdc0c3;
+        border-left:solid 2px #bdc0c3 ;
+        border-radius: 9px;
+        padding: 0.5em 1em;
+    }
+    .graphA2{
+        width:100%;
+        height:auto;
+        margin:0 0;
+        
+        background: white;
+        border-bottom: solid 3px #bdc0c3;
+        border-left:solid 2px #bdc0c3 ;
+        border-radius: 9px;
+        padding: 0.5em 1em;
+    }
+
+
+    .graphB{
+        width:85%;
+        height:auto;
+        margin:0 auto;
+        position:relative;
+        top:5%;
+    
+        background: white;
+        border-bottom: solid 3px #bdc0c3;
+        border-left:solid 2px #bdc0c3 ;
+        border-radius: 9px;
+        padding: 0.5em 1em;
+    }
+
+    .graphD1{
+        width:85%;
+        height:auto;
+        margin:0 auto;
+        position:relative;
+        top:9%;
+    
+        background: white;
+        border-bottom: solid 3px #bdc0c3;
+        border-left:solid 2px #bdc0c3 ;
+        border-radius: 9px;
+        padding: 0.5em 1em;
+    }
+
+    .graphD2{
+        width:85%;
+        height:auto;
+        margin:0 auto;
+        position:relative;
+        top:11%;
+    
+        background: white;
+        border-bottom: solid 3px #bdc0c3;
+        border-left:solid 2px #bdc0c3 ;
+        border-radius: 9px;
+        padding: 0.5em 1em;
+    }
+
+}
+
+@media screen and (max-width: 790px) {
+    .graphA2inner {
+        width:90%;
+        margin:0 auto;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 70px;
+    }
+    .A21{
+        width:100%;
+        margin:0 auto;
+        text-align: center;
+    }
+    .A22{
+        width:100%;
+        margin:0 auto;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .searcharea{
+        width:85%;
+        height:auto;
+        margin:0 auto;
+        background-color:white;
+        border-radius:20px;
+        position:relative;
+        top:1.5%;
+        text-align: center;
+         
+        
+        border-bottom: solid 3px #bdc0c3;
+        border-left:solid 2px #bdc0c3 ;
+        border-radius: 9px;
+        padding: 0.5em 1em;
+    }
+
+    .inputarea{
+        padding-top: 20px;
+        position:relative;
+        margin:0 auto;
+        width:88%;
+        position:relative;
+        top:10%;
+        display:flex; 
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    .searchbutton{
+        height:100%;
+        width:100%;
+        position:relative;
+        margin: 20px 0px 20px 0px;
+        top:20%;
+        text-align: center;
+    }
 }
